--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -62,7 +62,7 @@ body {
 
 .list-item-title {
   display: inline-block;
-  width: 75%;
+  width: 85%;
 }
 
 .list-container i {
@@ -75,4 +75,20 @@ body {
   border-right: none;
   padding: 20px;
   cursor: pointer;
+}
+
+
+.mt-10{
+  margin-top: 2em;
+}
+span.list-item-title {
+  padding: 1em;
+}
+
+.delete-note {
+  padding: 1em;
+}
+
+.list-group-item {
+  padding: 0 !important;
 }
